--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 nodes:
   es_user:
     type: elasticsearch
-    uri: http://ec2-54-166-23-17.compute-1.amazonaws.com:9200/bigdata_user
+    uri: http://hive-elasticsearch-1526193675.us-east-1.elb.amazonaws.com:9200/bigdata_user
     namespace: "bigdata_user.user"
   mongo_mapping:
     type: mongo
-    uri: mongodb://admin:r9erVfsG1!@ec2-54-197-172-254.compute-1.amazonaws.com:27000,ec2-54-227-31-31.compute-1.amazonaws.com:27000,ec2-54-198-137-212.compute-1.amazonaws.com:27000
+    uri: mongodb://admin:r9erVfsG1!@ec2-52-23-254-194.compute-1.amazonaws.com:27000,ec2-52-91-77-227.compute-1.amazonaws.com:27000,ec2-52-23-183-2.compute-1.amazonaws.com:27000
     debug: true
     tail: true
     namespace: "bigdata./^fan_tour_mapping$/"
